fix wedding crud
